// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Chart Utils createFacetLineSeries add time marker lines for each facet 1`] = `
Object {
  "animation": false,
  "data": Array [
    Object {
      "itemStyle": Object {
        "color": "red",
      },
      "label": Object {
        "formatter": "2026-01-21T06:15:07.625Z",
      },
      "lineStyle": Object {
        "type": "dashed",
      },
      "xAxis": 2026-01-21T06:15:07.625Z,
    },
  ],
  "lineStyle": Object {
    "type": "off",
    "width": 2,
  },
  "symbol": "none",
}
`;

exports[`Line Chart Utils createFacetLineSeries add time marker lines for each facet 2`] = `
Object {
  "animation": false,
  "data": Array [
    Object {
      "itemStyle": Object {
        "color": "red",
      },
      "label": Object {
        "formatter": "2026-01-21T06:15:07.625Z",
      },
      "lineStyle": Object {
        "type": "dashed",
      },
      "xAxis": 2026-01-21T06:15:07.625Z,
    },
  ],
  "lineStyle": Object {
    "type": "off",
    "width": 2,
  },
  "symbol": "none",
}
`;

exports[`Line Chart Utils createFacetLineSeries creates faceted line series 1`] = `
Array [
  Object {
    "connectNulls": true,
    "datasetIndex": 0,
    "emphasis": Object {
      "focus": "self",
    },
    "encode": Object {
      "x": "x",
      "y": "y1",
    },
    "gridIndex": 0,
    "lineStyle": Object {
      "width": 2,
    },
    "name": "y1",
    "type": "line",
    "xAxisIndex": 0,
    "yAxisIndex": 0,
  },
  Object {
    "connectNulls": true,
    "datasetIndex": 1,
    "emphasis": Object {
      "focus": "self",
    },
    "encode": Object {
      "x": "x",
      "y": "y1",
    },
    "gridIndex": 1,
    "lineStyle": Object {
      "width": 2,
    },
    "name": "y1",
    "type": "line",
    "xAxisIndex": 1,
    "yAxisIndex": 1,
  },
]
`;

exports[`Line Chart Utils createLineBarSeries add time marker when time marker is enabled 1`] = `
Object {
  "animation": false,
  "data": Array [
    Object {
      "itemStyle": Object {
        "color": "red",
      },
      "label": Object {
        "formatter": "2026-01-21T06:15:07.624Z",
      },
      "lineStyle": Object {
        "type": "dashed",
      },
      "xAxis": 2026-01-21T06:15:07.624Z,
    },
  ],
  "lineStyle": Object {
    "type": "off",
    "width": 2,
  },
  "symbol": "none",
}
`;

exports[`Line Chart Utils createLineBarSeries creates line and bar series with dual y-axes 1`] = `
Array [
  Object {
    "emphasis": Object {
      "focus": "self",
    },
    "encode": Object {
      "x": "x",
      "y": "lineCol",
    },
    "lineStyle": Object {
      "width": 2,
    },
    "name": "Line Value",
    "type": "line",
    "yAxisIndex": 0,
  },
  Object {
    "emphasis": Object {
      "focus": "self",
    },
    "encode": Object {
      "x": "x",
      "y": "barCol",
    },
    "name": "Bar Value",
    "type": "bar",
    "yAxisIndex": 1,
  },
]
`;

exports[`Line Chart Utils createLineSeries add time marker when time marker is enabled 1`] = `
Object {
  "animation": false,
  "data": Array [
    Object {
      "itemStyle": Object {
        "color": "red",
      },
      "label": Object {
        "formatter": "2026-01-21T06:15:07.623Z",
      },
      "lineStyle": Object {
        "type": "dashed",
      },
      "xAxis": 2026-01-21T06:15:07.623Z,
    },
  ],
  "lineStyle": Object {
    "type": "off",
    "width": 2,
  },
  "symbol": "none",
}
`;

exports[`Line Chart Utils createLineSeries creates line series with function for series fields 1`] = `
Array [
  Object {
    "connectNulls": true,
    "emphasis": Object {
      "focus": "self",
    },
    "encode": Object {
      "x": "x",
      "y": "y1",
    },
    "lineStyle": Object {
      "width": 2,
    },
    "name": "y1",
    "type": "line",
  },
  Object {
    "connectNulls": true,
    "emphasis": Object {
      "focus": "self",
    },
    "encode": Object {
      "x": "x",
      "y": "y2",
    },
    "lineStyle": Object {
      "width": 2,
    },
    "name": "y2",
    "type": "line",
  },
]
`;
